Logtalk/examples/errors/unmatchdir.lgt

% misspelt opening object directive

:- objecto(unmatchdir).


:- end_object.
